fixed new hero  races not visible

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,3 +1,7 @@
+* {
+  background-color: whitesmoke;
+}
+
 header {
     margin-top: 30px;
     text-align: center;
