--- a/src/app/components/hero/hero-card/hero-card.component.css
+++ b/src/app/components/hero/hero-card/hero-card.component.css
@@ -2,9 +2,16 @@
     margin: 10px;
   }
   
-  ::ng-deep  .mat-checkbox .mat-checkbox-frame {
-    background-color: #dddddd;
-    border: 1px;
+  .mat-checkbox .mat-checkbox-frame {
+    border-color: black;
+    background-color: #dddddd
+}
+
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+    margin-top: 1px;
+    margin-left: 1px;
+    width: 18px;
+    height: 18px;
 }
 span{
     margin-right: 2px;
